# crypto-ai-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  pytest.ini
.github/workflows/: ci-cd.yml  dependency-updates.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/tests/: conftest.py  test_project_structure.py
db/: schema.sql
db/init/: 01-init.sh
db/migrations/: 000_migration_framework.sql  001_initial_schema.sql
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: infra.md
frontend/: cypress.config.js  package.json
frontend/cypress/e2e/: app.cy.ts
frontend/cypress/fixtures/: cryptocurrencies.json  health.json  portfolios.json  user.json
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.test.tsx  setupTests.ts  test-utils.tsx
infra/terraform/: eks.tf  main.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
k8s/base/: application.yml  kustomization.yml  secrets.yml
k8s/overlays/development/: kustomization.yml  replica-patch.yml  resource-patch.yml
k8s/overlays/production/: kustomization.yml  replica-patch.yml  resource-patch.yml
tests/: conftest.py
tests/integration/: test_infrastructure.py
tests/unit/: test_project_structure.py
